feat: Add Flink components and enhance Makefiles
1. Add Flink components to docker-compose:
   - JobManager with health check
   - TaskManager
   - SQL Client

2. Create modular Makefile structure:
   - Add make/common.mk with shared definitions
   - Add color and emoji support
   - Add health checks for all services
   - Update generator Makefile to use common definitions

3. Add .gitignore file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,60 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
 
+  jobmanager:
+    image: apache/flink:1.18.0
+    ports:
+      - "8081:8081"
+    command: jobmanager
+    environment:
+      - |
+        FLINK_PROPERTIES=
+        jobmanager.rpc.address: jobmanager
+        state.backend: filesystem
+        state.checkpoints.dir: file:///tmp/flink-checkpoints
+        heartbeat.interval: 1000
+        heartbeat.timeout: 5000
+        rest.flamegraph.enabled: true
+        web.backpressure.refresh-interval: 10000
+    volumes:
+      - /tmp/flink-checkpoints:/tmp/flink-checkpoints
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/overview"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
+  taskmanager:
+    image: apache/flink:1.18.0
+    depends_on:
+      jobmanager:
+        condition: service_healthy
+    command: taskmanager
+    environment:
+      - |
+        FLINK_PROPERTIES=
+        jobmanager.rpc.address: jobmanager
+        taskmanager.numberOfTaskSlots: 2
+        state.backend: filesystem
+        state.checkpoints.dir: file:///tmp/flink-checkpoints
+        heartbeat.interval: 1000
+        heartbeat.timeout: 5000
+    volumes:
+      - /tmp/flink-checkpoints:/tmp/flink-checkpoints
+
+  sql-client:
+    image: apache/flink:1.18.0
+    command: bin/sql-client.sh
+    depends_on:
+      jobmanager:
+        condition: service_healthy
+    environment:
+      - |
+        FLINK_PROPERTIES=
+        jobmanager.rpc.address: jobmanager
+        rest.address: jobmanager
+
 networks:
   default:
     name: analytics-network
