--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,9 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
 
   jobmanager:
-    image: apache/flink:1.18.0
+    build:
+      context: ./flink
+      dockerfile: Dockerfile
     ports:
       - "8081:8081"
     command: jobmanager
@@ -73,7 +75,9 @@ services:
       start_period: 30s
 
   taskmanager:
-    image: apache/flink:1.18.0
+    build:
+      context: ./flink
+      dockerfile: Dockerfile
     depends_on:
       jobmanager:
         condition: service_healthy
@@ -91,7 +95,9 @@ services:
       - /tmp/flink-checkpoints:/tmp/flink-checkpoints
 
   sql-client:
-    image: apache/flink:1.18.0
+    build:
+      context: ./flink
+      dockerfile: Dockerfile
     command: bin/sql-client.sh
     depends_on:
       jobmanager:
