--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -196,6 +196,25 @@ services:
     volumes:
       - ./flink/sql:/opt/flink/sql
 
+  dashboard:
+    build:
+      context: ./dashboard
+      dockerfile: Dockerfile
+    ports:
+      - "8501:8501"
+    environment:
+      - PINOT_HOST=pinot-broker
+      - PINOT_PORT=8099
+    depends_on:
+      pinot-broker:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+
   debug:
     image: nicolaka/netshoot
     container_name: network-debug
