--- a/dashboard/pyproject.toml
+++ b/dashboard/pyproject.toml
@@ -14,6 +14,6 @@ plotly = "^5.18.0"
 pandas = "^2.2.0"
 pinotdb = "^0.5.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
 flake8 = "^7.0.0"
