updated Pinot and Kafka versions

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   kafka:
-    image: apache/kafka:3.8.0
+    image: apache/kafka:4.0.1
     hostname: kafka
     ports:
       - "9092:9092"
@@ -57,7 +57,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
   
   pinot-controller:
-    image: apachepinot/pinot:1.2.0-21-openjdk
+    image: apachepinot/pinot:1.4.0-21-ms-openjdk
     command: "StartController -zkAddress pinot-zookeeper:2181"
     container_name: pinot-controller
     hostname: pinot-controller
@@ -79,7 +79,7 @@ services:
       - ./pinot/data:/data
 
   pinot-broker:
-    image: apachepinot/pinot:1.2.0-21-openjdk
+    image: apachepinot/pinot:1.4.0-21-ms-openjdk
     command: "StartBroker -zkAddress pinot-zookeeper:2181"
     restart: unless-stopped
     container_name: "pinot-broker"
@@ -98,7 +98,7 @@ services:
       start_period: 30s
 
   pinot-server:
-    image: apachepinot/pinot:1.2.0-21-openjdk
+    image: apachepinot/pinot:1.4.0-21-ms-openjdk
     command: "StartServer -zkAddress pinot-zookeeper:2181"
     restart: unless-stopped
     container_name: "pinot-server"
